--- a/style.css
+++ b/style.css
@@ -150,10 +150,11 @@ section h2{
 .contenido1 .card{
     margin: auto;
     width: 290px;
+    border-radius: 20px;
 }
 
 .contenido1 .button-card{
-    background-color: cornflowerblue;
+    /*background-color: cornflowerblue;*/
 
     height: 250px;
     display: flex;
@@ -167,7 +168,7 @@ section h2{
 .contenido1 .button-card > h4{
     text-align: center;
     font-size: 20px;
-    color: #000;
+    color: #fff;
 }
 
 .contenido1 .p-card{
@@ -175,15 +176,33 @@ section h2{
     margin: 10px auto 0;
     text-align: center;
 }
-
-.contenido1 #dw{
-    background: url(./codice-04-cover.jpg);
-    filter: blur(3px);
-}.contenido1 .card #dw:hover{
-    transition: 1000ms;
-    filter: blur(0px);
-    filter: brightness(80%);
+/* EFECTO BLUR DE LAS CARD*/
+.filter-blur{
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    border-radius: 20px;
+}.filter-blur:hover{
+    transition: all 500ms;
+    -webkit-backdrop-filter: blur(0px);
+    backdrop-filter: blur(0px);
+    -webkit-transform:scale(1.25);
+    -moz-transform:scale(1.25);
+    -ms-transform:scale(1.25);
+    -o-transform:scale(1.25);
+    transform:scale(1.25);
 }
+
+#card-dw{
+    background: url(./codice-04-cover.jpg);
+}
+#card-marketing{
+    background: url(./marketing.png);
+}
+#card-software{
+    background: url(./software.jpg);
+}
+
+
 /**--------------CONTENIDO MAIN------------**/
 
 .container h2{
