--- a/style.css
+++ b/style.css
@@ -98,31 +98,6 @@ body{
     background-color: rgb(2, 2, 14);
 }    
 
-.container{
-    border: 1px solid black;
-
-    width: 70%;
-    margin: auto ;
-}
-
-section{
-    border-bottom: 1px solid #000;
-    border-radius: 20px;
-    background-color: #fdfdfd;  /**main**/
-    margin: 50px auto;
-    padding-top: 10px;
-
-    height: 300px;
-}
-/*ARREGLO DE DOBLE BORDE AL FINAL DEL CONTENEDOR*/
-    .contacto{border: none;}
-
-section h2{
-    text-align: center;
-    font-size: 25px;
-    margin: 20px auto 40px;
-}
-
 /**----------EN QUE PODEMOS AYUDARTE----------**/
 
 .banner .EnQuePodemosAyudarte h2{
@@ -137,7 +112,7 @@ section h2{
     margin: 0 auto;
 }
 
-.contenido1{
+.atajos{
     padding: 50px;
     padding-bottom: 30px;
     margin: auto;
@@ -147,13 +122,13 @@ section h2{
     grid-template-rows: 1fr;
 }
 
-.contenido1 .card{
+.atajos .card{
     margin: auto;
     width: 290px;
     border-radius: 20px;
 }
 
-.contenido1 .button-card{
+.atajos .button-card{
     /*background-color: cornflowerblue;*/
 
     height: 250px;
@@ -165,13 +140,13 @@ section h2{
     border-radius: 20px;
 }
 
-.contenido1 .button-card > h4{
+.atajos .button-card > h4{
     text-align: center;
     font-size: 20px;
     color: #fff;
 }
 
-.contenido1 .p-card{
+.atajos .p-card{
     width: 80%;
     margin: 10px auto 0;
     text-align: center;
@@ -205,11 +180,76 @@ section h2{
 
 /**--------------CONTENIDO MAIN------------**/
 
+.container{
+    width: 70%;
+    margin: auto ;
+}
+
+section{
+    border-bottom: 1px solid #000;
+    border-radius: 20px;
+    background-color: #fdfdfd;  /**main**/
+    margin: 50px auto;
+    padding-top: 10px;
+
+    height: auto;
+}
+/*ARREGLO DE DOBLE BORDE AL FINAL DEL CONTENEDOR*/
+    .contacto{border: none;}
+
+section h2{
+    text-align: center;
+    font-size: 25px;
+    margin: 20px auto 40px;
+}
+
 .container h2{
+    margin-bottom: 10px;
     font-family: 'Fjalla One', sans-serif;
     font-size: 40px;
     color: #fff;
     -webkit-text-stroke: 1px #000;
+}
+
+/** ------------- VER MÁS ------------------**/
+    #mas{
+        display: none;
+    }
+
+    #verMas{
+        display: block;
+        padding: 10px;
+        margin-left: 85%;
+        background: transparent;
+        color:  #f23528;
+        border: none;
+        cursor: pointer;
+        transition: 100ms ease-in;
+    }
+    #verMas:hover{
+        color:  #18255a;
+    }
+
+    #verMenos{
+        display: block;
+        padding: 15px;
+        margin-left: 80%;
+        background: transparent;
+        color: #18255a;
+        border: none;
+        cursor: pointer;
+        transition: 100ms ease-in;
+    }
+    #verMenos:hover{
+        color: #f23528; 
+    }
+/** ----------CONTENIDO ----------------**/
+.contenido1{
+    width: 80%;
+    padding-bottom: 20px;
+    margin:auto;
+    text-align: justify;
+    font-size: 18px;
 }
 .contenido2{
     width: 80%;
@@ -218,7 +258,6 @@ section h2{
     font-size: 20px;
     font-weight: 300;
 }
-
 .contenido3{
     width: 80%;
     margin:auto;
@@ -226,7 +265,6 @@ section h2{
     font-size: 20px;
     font-weight: 300;
 }
-
 .contenido4{
     width: 80%;
     margin:auto;
@@ -234,7 +272,6 @@ section h2{
     font-size: 20px;
     font-weight: 300;
 }
-
 .contenido5{
     width: 80%;
     margin:auto;
