--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ body{
     font-family: "Segoe UI","Helvetica Neue",sans-serif;
 }
 
+:root{
+    --azul: #1e426b;
+    --verde: #487d72;
+    --negro: #545454;
+    --celeste: #6ab6a6;
+}
+
 /** SKEWS **/
 .skew-abajo{
     position: absolute;
@@ -42,7 +49,7 @@ body{
    width: 100%;
    height: 75px;
    background: #FDFDFD;
-   border-bottom: 3px solid #ff2e63;
+   border-bottom: 3px solid var(--verde);
    top: 0;
    left: 0;
 
@@ -55,13 +62,9 @@ body{
 .nav .logo-box{
    margin-left: 30px;
 }
-
-.nav .logo-box h1{
-   font-size: 35px;
-   font-weight: 400;
-   text-align: center;
+.nav .logo-box img{
+    height: 70px;
 }
-
 .menu{
     margin: auto 60px auto 0;
     display: inline-block;
@@ -79,7 +82,7 @@ body{
 }
 
 .menu a:hover{
-    color: #f23528;
+    color: var(--verde);
 }
 
 /*****CARROUSEL**********/
@@ -92,10 +95,8 @@ body{
 }
 
 .main{
-    /*background-image: url(./background.svg);
-    background-repeat: repeat;
-    background-size: 40px}*/
     background-color: rgb(2, 2, 14);
+    background-image: url();
 }    
 
 /**----------EN QUE PODEMOS AYUDARTE----------**/
@@ -103,7 +104,7 @@ body{
 .banner .EnQuePodemosAyudarte h2{
     display: block;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 12px;
     font-size: 35px;
 }
 
@@ -113,7 +114,7 @@ body{
 }
 
 .atajos{
-    padding: 50px;
+    padding: 40px 50px;
     padding-bottom: 30px;
     margin: auto;
 
@@ -129,8 +130,6 @@ body{
 }
 
 .atajos .button-card{
-    /*background-color: cornflowerblue;*/
-
     height: 250px;
     display: flex;
     justify-content: center;
@@ -141,30 +140,29 @@ body{
 }
 
 .atajos .button-card > h4{
+    width: 100%;
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     color: #fff;
+    -webkit-text-stroke: 01px #000;
+}.filter-blur:hover h4{
+    background: #000;
+    padding: 5px;
+    border: 1px solid #fff;
+    transition: all 150ms;
 }
 
-.atajos .p-card{
+/*.atajos .p-card{
     width: 80%;
     margin: 10px auto 0;
     text-align: center;
-}
+}*/
 /* EFECTO BLUR DE LAS CARD*/
-.filter-blur{
+.filter-blur:hover{
     -webkit-backdrop-filter: blur(2px);
     backdrop-filter: blur(2px);
-    border-radius: 20px;
-}.filter-blur:hover{
-    transition: all 500ms;
-    -webkit-backdrop-filter: blur(0px);
-    backdrop-filter: blur(0px);
-    -webkit-transform:scale(1.25);
-    -moz-transform:scale(1.25);
-    -ms-transform:scale(1.25);
-    -o-transform:scale(1.25);
-    transform:scale(1.25);
+}.filter-blur{
+    transition: all 800ms;
 }
 
 #card-dw{
@@ -186,29 +184,22 @@ body{
 }
 
 section{
-    border-bottom: 1px solid #000;
     border-radius: 20px;
     background-color: #fdfdfd;  /**main**/
     margin: 50px auto;
     padding-top: 10px;
-
+    padding-bottom: 20px;
     height: auto;
 }
-/*ARREGLO DE DOBLE BORDE AL FINAL DEL CONTENEDOR*/
-    .contacto{border: none;}
 
-section h2{
-    text-align: center;
-    font-size: 25px;
-    margin: 20px auto 40px;
-}
 
 .container h2{
-    margin-bottom: 10px;
+    text-align: center;
+    margin: 3px auto 10px;
     font-family: 'Fjalla One', sans-serif;
     font-size: 40px;
-    color: #fff;
-    -webkit-text-stroke: 1px #000;
+    color: var(--azul);
+    -webkit-text-stroke: 0.5px #000;
 }
 
 /** ------------- VER MÁS ------------------**/
@@ -244,38 +235,9 @@ section h2{
         color: #f23528; 
     }
 /** ----------CONTENIDO ----------------**/
-.contenido1{
+.contenido{
     width: 80%;
-    padding-bottom: 20px;
     margin:auto;
     text-align: justify;
     font-size: 18px;
-}
-.contenido2{
-    width: 80%;
-    margin:auto;
-
-    font-size: 20px;
-    font-weight: 300;
-}
-.contenido3{
-    width: 80%;
-    margin:auto;
-
-    font-size: 20px;
-    font-weight: 300;
-}
-.contenido4{
-    width: 80%;
-    margin:auto;
-
-    font-size: 20px;
-    font-weight: 300;
-}
-.contenido5{
-    width: 80%;
-    margin:auto;
-
-    font-size: 20px;
-    font-weight: 300;
 }
