--- a/style.css
+++ b/style.css
@@ -7,6 +7,29 @@
 body{
     overflow-x: hidden;
     font-family: "Segoe UI","Helvetica Neue",sans-serif;
+
+    background: #000;
+}
+
+#particles-js {
+	height: 100vh; 
+	width: 100%;
+    position: fixed;
+    z-index: -1;
+}
+
+.contenedor {
+    position: relative;
+    z-index: 99;
+    opacity: .85;
+}
+
+.background{
+    position:absolute;  
+    display:block; 
+    top: 0;  
+    left: 0;
+    z-index: 0;
 }
 
 :root{
@@ -92,12 +115,7 @@ body{
 .banner{
     background: rgb(253, 253, 253);
     margin-top: 75px;
-}
-
-.main{
-    background-color: rgb(2, 2, 14);
-    background-image: url();
-}    
+}  
 
 /**----------EN QUE PODEMOS AYUDARTE----------**/
 
@@ -144,7 +162,7 @@ body{
     text-align: center;
     font-size: 25px;
     color: #fff;
-    -webkit-text-stroke: 01px #000;
+    -webkit-text-stroke: 2px #000;
 }.filter-blur:hover h4{
     background: #000;
     padding: 5px;
